// This file is part of radia.
//
// radia is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// radia is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with radia.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package graph;

// GraphID is an identified for a specific arrangemnt of nodes and edges.
// We can use this to select the specific topology we wish to pass messages
// to.
message GraphID {
  repeated int32 id = 1; // Componenets o the id
}

// AlgorithmID identifies a specific instance of a running algorithm. It
// should be possible to run multiple instances of any algorithms
// over a given graph at any one time
message AlgorithmID {
  repeated int32 id = 1; // Componenets o the id
}

